5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1644_869.log
== TEST (2019-04-09 21:59:02) 
-- CODE:
compra = input()
if (compra>= 200):
	total = compra*0.05
else:
	total = compra
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (compra>= 200):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:59:25) 
-- CODE:
compra = input()
if (compra >= 200):
	total = compra*0.05
else:
	total = compra
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (compra >= 200):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:59:34) 
-- CODE:
compra = input()
if (compra => 200):
	total = compra*0.05
else:
	total = compra
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    if (compra => 200):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:59:45) 
-- CODE:
compra = input()
if (compra >= 200.00):
	total = compra*0.05
else:
	total = compra
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (compra >= 200.00):
TypeError: '>=' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:00:02) 
-- CODE:
compra = float(input())
if (compra >= 200.00):
	total = compra*0.05
else:
	total = compra
print(round(total,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:00:10) 
-- CODE:
compra = float(input())
if (compra >= 200.00):
	total = compra*0.5
else:
	total = compra
print(round(total,2))
-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:00:37) 
-- CODE:
compra = float(input())
if (compra >= 200.00):
	total = compra - compra*0.5
else:
	total = compra
print(round(total,2))
-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:01:16) 
-- CODE:
compra = float(input())
if (compra >= 200.00):
	total = compra - compra*0.05
else:
	total = compra
print(round(total,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:01:21) 
-- CODE:
compra = float(input())
if (compra >= 200.00):
	total = compra - compra*0.05
else:
	total = compra
print(round(total,2))
-- EXECUTION TIME:
0.156981
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
